# Focalors

./: .gitignore  CMakeLists.txt  GitHub.lnk  README.md  cashierplay baseballbest wishesbring cups  brought cupsmake mistakesbought  broughtclassmatesEnglish wordsmore and mor.md
misc/: demo.cpp  rdgen.cpp
problems-cpp/: 10.cpp  101.cpp  1012.cpp  1025.cpp  1026.cpp  103.cpp  105.cpp  106.cpp  107.cpp  108.cpp  109.cpp  1095.cpp  110.cpp  1106.cpp  111.cpp  112.cpp  113.cpp  1137.cpp  116.cpp  117.cpp  118.cpp  119.cpp  1210.cpp  1220.cpp  1223.cpp  123.cpp  1235.cpp  124.cpp  1250.cpp  126.cpp  1263.cpp  1269.cpp  127-2.cpp  127.cpp  128.cpp  1289.cpp  129.cpp  1298.cpp  130.cpp  1320.cpp  (+193 more)
problems-cpp-nowcoder/: README.md  zt1.cs  zt10.cpp  zt11.cpp  zt12.cpp  zt13.cpp  zt14.cpp  zt15.cpp  zt16.cpp  zt17.cpp  zt18.cpp  zt19.cpp  zt2.cs  zt20.cpp  zt21.cpp  zt22.cpp  zt23.cpp  zt24.cpp  zt25.cpp  zt26.cpp  zt27.cpp  zt28.cpp  zt29.cpp  zt3.cpp  zt30.cpp  zt31.cpp  zt32.cpp  zt33.cpp  zt34.cpp  zt35.cpp  zt36.cpp  zt37.cpp  zt38.c  zt39.cpp  zt4.cpp  zt40.cpp  zt41.cpp  zt42.cpp  zt43.cpp  zt44.cpp  (+18 more)
problems-cs/: 104.cs  11.cs  114.cs  12.cs  120.cs  122.cs  125.cs  1261.cs  15.cs  16.cs  169.cs  17.cs  172.cs  18.cs  19.cs  1969.cs  200.cs  2129.cs  22.cs  225.cs  231.cs  232.cs  2368.cs  24.cs  2684.cs  2789.cs  283.cs  2834.cs  29.cs  2917.cs  2952.cs  303.cs  31.cs  310.cs  322.cs  33.cs  330.cs  331.cs  34.cs  36.cs  (+34 more)
problems-legacy-cpp/: 1.cpp  100.cpp  115.cpp  121.cpp  13.cpp  132.cpp  136.cpp  14.cpp  144.cpp  145.cpp  150.cpp  2.cpp  20.cpp  21.cpp  26.cpp  (+22 more)
(+13 files in other folders)
